# migen

./: .travis.yml  README.md  _setup_hooks.py  dev-requirements.txt  install_nvc.sh  requirements.txt  setup.cfg  setup.py  tox.ini  unittest.cfg
ci/: Fix-IEEE-download-URL.patch  ieee-download-webpage-has-changed-375.patch  install_nvc.sh
doc/: conf.py
examples/basic/: arrays.py  complex.py  fsm.py  graycounter.py  hamming.py  instance.py  local_cd.py  memory.py  namer.py  psync.py  readme.py  record.py  reslice.py  simple_gpio.py  tristate.py  two_dividers.py  two_dividers_tb.vhd
examples/dataflow/: dma.py  misc.py  structuring.py
examples/sim/: abstract_transactions_wb.py  basic1.py  basic2.py  dataflow.py  fir.py  memory.py
mibuild/: fpgalink_programmer.py  openocd.py
mibuild/altera/: __init__.py  common.py
mibuild/lattice/: common.py  diamond.py  programmer.py
mibuild/sim/: verilator.py
mibuild/xilinx/: common.py  ise.py  platform.py  programmer.py  vivado.py
migen/actorlib/: dma_wishbone.py  fifo.py  misc.py  packet.py  sim.py  spi.py  structuring.py
migen/bank/: bank.py  csrgen.py  description.py  eventmanager.py  wbgen.py
migen/bus/: csr.py  memory.py  transactions.py  wishbone.py  wishbone2csr.py
migen/fhdl/: bitcontainer.py  decorators.py  edif.py  module.py  namer.py  ocram_sp.vhd  simplify.py  specials.py  structure.py  tools.py  tracer.py  verilog.py  vhdl.py  visit.py
migen/flow/: actor.py  hooks.py  isd.py  network.py  perftools.py  plumbing.py
migen/genlib/: cdc.py  coding.py  complex.py  divider.py  fifo.py  fsm.py  io.py  mhamgen.py  misc.py  record.py  resetsync.py  rob.py  roundrobin.py  sort.py
migen/sim/: core.py  generic.py  icarus.py  ipc.py  upper.py  vcd.py
migen/test/: support.py  test_actor.py  test_bitslip.py  test_coding.py  test_constant.py  test_divider.py  test_examples.py  test_fifo.py  test_fsm.py  test_passive.py  test_platform.py  test_signed.py  test_size.py  test_sort.py  (+2 more)
(+8 files in other folders)
