[metadata]
name = migen
author = Sebastien Bourdeauducq
author_email = sb@m-labs.hk
home-page = http://m-labs.hk
download_url = https://github.com/m-labs/migen
summary = Python toolbox for building complex digital hardware
description-file = README.md
test_suite = migen.test
license = BSD
platform = Any
keywords =
    HDL
    ASIC
    FPGA hardware design
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    migen

[flake8]
select = E226,F401,F402,F403
#ignore = E226
exclude = migen/test/*,std.py,__init__.py
max-complexity = 10

[build_sphinx]
source-dir = doc
build-dir = doc/_build
