[metadata]
name = migen
author = Sebastien Bourdeauducq
author_email = sb@m-labs.hk
home-page = http://m-labs.hk
download_url = https://github.com/m-labs/migen
summary = Python toolbox for building complex digital hardware
description-file = README.md
test_suite = migen.test
license = BSD
platform = Any
keywords =
    HDL
    ASIC
    FPGA hardware design
classifiers =
    Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)
    Environment :: Console
    Development Status :: Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages = migen
package-data =
    migen = fhdl/templates/*

[tool:pytest]
addopts = --flake8
flake8-ignore =
    *.py F405 E501 E741
    doc/conf.py ALL
    __init__.py F401 F403

[flake8]
ignore =
    F405,
    E501,
    E741
exclude =
    doc/conf.py,
    __init__.py

[build_sphinx]
source-dir = doc
build-dir = doc/_build
